<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="10dp">

	<EditText
		android:id="@+id/editTextName"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/enter_the_product_name"
		android:inputType="textCapSentences"/>

	<EditText
		android:id="@+id/editTextCode"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/enter_the_product_code"
		android:inputType="number"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<Button
			android:id="@+id/buttonUpdateArtist"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:text="@string/update"/>

		<Button
			android:id="@+id/buttonDeleteArtist"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:text="@string/delete"/>

	</LinearLayout>

</LinearLayout>

